pushing latest build to repo

--- a/index.html
+++ b/index.html
@@ -2,28 +2,35 @@
 <html>
 <head>
 	<title></title>
+	<link href="stylesheet.css" rel="stylesheet" />
 </head>
 <body>
 	<div id="basic">
-		
+		<p>Click a link below to change the color of the background!</p>
+		<a href="#" onclick="changeBGC('green')">Green</a>
+		<a href="#" onclick="changeBGC('blue')">Blue</a>
+		<a href="#" onclick="changeBGC('red')">Red</a>
+		<a href="#" onclick="changeBGC('black')">Black</a>
+		<a href="#" onclick="changeBGC('white')">White</a>
+		<a href="#" onclick="changeBGC('random')">RaNdOm</a>
 	</div>
 
-	<div id="cond">
-		
+	<!--<div id="cond">
+
 	</div>
 
 	<div id="control">
-		
+
 	</div>
 
 	<div id="objects">
-		
-	</div>
+
+	</div>-->
 
 	<!-- Scripts -->
-	<script scr="basic.js"></script>
-	<script scr="cond.js"></script>
-	<script scr="control.js"></script>
-	<script scr="objects.js"></script>
+	<script src="basic.js"></script>
+	<script src="cond.js"></script>
+	<script src="control.js"></script>
+	<script src="objects.js"></script>
 </body>
 </html>
